fix positioning errors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="contact.html">Contact Us</a></li>
         <li><a href="">Buisness Register</a></li>
         <li><a href="#"class="button" id="signInButton">Sign In</a></li>
-      </ul>
+        </ul>
     </div>
     <Img src="djLogo.png"></Img>
     
@@ -30,7 +30,7 @@
         
             <form>
                 <h2>Sign Up</h2>
-                    <span class="info"> name:</span>
+                    <span class="info">First name:</span>
                     <input type="text" name="firstname">
                     <span class="info">Last name:</span>
                     <input type="text" name="lastname">
